<resources>
    <string name="app_name">Agenda Android</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="invalid_credentials">Usuario o contraseña incorrectos</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="add_contact">Agregar contacto</string>
    <string name="first_name">Nombre</string><string name="last_name">Apellido</string>
    <string name="phone">Teléfono</string><string name="address">Dirección</string>
    <string name="save">Guardar</string><string name="cancel">Cancelar</string><string name="edit">Editar</string><string name="delete">Eliminar</string>
    <string name="required">Campo requerido</string>
    <string name="contacts">Contactos</string><string name="search">Buscar</string><string name="logout">Cerrar sesión</string>
    <string name="sync">Sincronizar API</string><string name="syncing">Consultando API…</string>
    <string name="sync_success">%1$d contactos importados</string>
</resources>
